# flask_simple

./: .gitignore  README.md  app.py  config.py  pyproject.toml
app/: __init__.py
app/api/: __init__.py  api_v1.py
app/dao/: __init__.py
app/model/: __init__.py
